Moved all utilities classes to the individual packages (if only used once) and moved Size class into com.putoet.grid package as part of the AoC library